--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="temperature.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/f462297f0f.js" crossorigin="anonymous"></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -35,7 +36,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
 </body>
 
 </html>
