--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Converter</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="temperature.png" type="image/x-icon">
+    <link rel="shortcut icon" href="temp-favicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/f462297f0f.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
 </head>
